@@ -1,4 +1,4 @@
-<!-- Copyright 2018, Oracle Corporation and/or its affiliates. All rights 
+<!-- Copyright 2018, 2019, Oracle Corporation and/or its affiliates. All rights
 	reserved. -->
 <!-- Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>oracle.kubernetes</groupId>
 		<artifactId>operator-parent</artifactId>
-		<version>2.1</version>
+		<version>2.2</version>
 	</parent>
 
 	<artifactId>operator-integration-tests</artifactId>
@@ -25,6 +25,12 @@
 			<url>https://github.com/oracle/weblogic-kubernetes-operator/blob/master/LICENSE</url>
 		</license>
 	</licenses>
+
+	<properties>
+		<src-integration-test>${project.basedir}/src/test/java</src-integration-test>
+		<resource-integration-test>${project.basedir}/src/test/resources</resource-integration-test>
+	</properties>
+
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
@@ -61,6 +67,32 @@
 			<artifactId>guava</artifactId>
 			<version>${guava-version}</version>
 		</dependency>
+		<!-- JSON processing: jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
@@ -81,119 +113,254 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.32</version>
+		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven-enforcer-plugin-version}</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>${maven.version.range}</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+									<version>${java.version.range}</version>
+								</requireJavaVersion>
+								<requirePluginVersions></requirePluginVersions>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin-version}</version>
+				<configuration>
+					<release>11</release>
+					<compilerArgs>
+						<arg>-Xpkginfo:always</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.coveo</groupId>
+				<artifactId>fmt-maven-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<phase>test</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven-release-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${maven-resources-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin-version}</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>${maven-pmd-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>${maven-site-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>${maven-clean-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${maven-checkstyle-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>${maven-install-plugin-version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${maven-deploy-plugin-version}</version>
+			</plugin>
+			<plugin>
+			  <groupId>com.github.spotbugs</groupId>
+			  <artifactId>spotbugs-maven-plugin</artifactId>
+			  <version>${spotbugs-maven-plugin-version}</version>
+			</plugin>
+			<plugin>
+			  <groupId>org.jacoco</groupId>
+			  <artifactId>jacoco-maven-plugin</artifactId>
+			  <version>${jacoco.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<skip>${skipITs}</skip>
+						</configuration>
+					</execution>
+					<execution>
+						<id>setupenv</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<environmentVariables>
+								<JRF_ENABLED>${jrf_enabled}</JRF_ENABLED>
+							</environmentVariables>
+							<skip>${skipITs}</skip>
+							<executable>${resource-integration-test}/setupenv.sh</executable>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>add-test-source</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${src-integration-test}</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-test-resource</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>${resource-integration-test}</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${maven-failsafe-plugin-version}</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+					<encoding>UTF-8</encoding>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+					<argLine>${failsafeArgLine}</argLine>
+					<failIfNoTests>false</failIfNoTests>
+					<systemPropertyVariables>
+						<maxThreads>3</maxThreads>
+					</systemPropertyVariables>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${project.basedir}/src/test/resources/wlthint3client.jar</additionalClasspathElement>
+					</additionalClasspathElements>
+					<includes>
+						<include>
+							${includes-failsafe}
+						</include>
+					</includes>
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>integration-tests</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<phase>integration-test</phase>
+						<configuration>
+							<skipTests>${skipITs}</skipTests>
+							<systemPropertyVariables>
+								<java.util.logging.SimpleFormatter.format>%1$tm-%1$td-%1$tY %1$tH:%1$tM:%1$tS %4$-6s %2$s %5$s%6$s%n</java.util.logging.SimpleFormatter.format>
+							</systemPropertyVariables>
+							<trimStackTrace>false</trimStackTrace>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<profiles>
-
 		<profile>
 			<id>java-integration-tests</id>
 			<properties>
-				<src-integration-test>${project.basedir}/src/test/java</src-integration-test>
-				<resource-integration-test>${project.basedir}/src/test/resources</resource-integration-test>
 				<skipITs>false</skipITs>
+				<includes-failsafe>**/IT*</includes-failsafe>
+				<jrf_enabled>false</jrf_enabled>
 			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.6.0</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>java</goal>
-								</goals>
-							</execution>
-							<execution><!-- pull or build images, create secrets, etc -->
-								<id>setupenv</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>${resource-integration-test}/setupenv.sh</executable>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
-						<version>3.0.0</version>
-						<executions>
-							<execution>
-								<id>add-test-source</id>
-								<phase>generate-test-resources</phase>
-								<goals>
-									<goal>add-test-source</goal>
-								</goals>
-								<configuration>
-									<sources>
-										<source>${src-integration-test}</source>
-									</sources>
-								</configuration>
-							</execution>
-							<execution>
-								<id>add-test-resource</id>
-								<phase>generate-test-resources</phase>
-								<goals>
-									<goal>add-test-resource</goal>
-								</goals>
-								<configuration>
-									<resources>
-										<resource>
-											<directory>${resource-integration-test}</directory>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.22.1</version>
-						<configuration> <!-- run tests in parallel -->
-							<encoding>UTF-8</encoding>
-							<argLine>${failsafeArgLine}</argLine>
-							<failIfNoTests>false</failIfNoTests>
-							<systemPropertyVariables>
-								<!-- Add any system properties here -->
-								<!--<project.build.directory>${project.build.directory}</project.build.directory> -->
-								<!--<weblogic.operator.root.directory>${basedir}/..</weblogic.operator.root.directory> -->
-								<!--<TAGS>${env.TAGS}</TAGS> -->
-								<maxThreads>3</maxThreads>
-							</systemPropertyVariables>
-							<additionalClasspathElements>
-								<additionalClasspathElement>${project.basedir}/src/test/resources/wlthint3client.jar</additionalClasspathElement>
-							</additionalClasspathElements>
-    					</configuration>
-
-						<executions>
-							<execution>
-								<id>integration-tests</id>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-								<phase>integration-test</phase>
-								<configuration>
-									<skipTests>${skipITs}</skipTests>
-							        <systemPropertyVariables>
-					                    <!-- Set JUL Formatting -->
-					                    <java.util.logging.SimpleFormatter.format>%1$tm-%1$td-%1$tY %1$tH:%1$tM:%1$tS %4$-6s %2$s %5$s%6$s%n</java.util.logging.SimpleFormatter.format>
-				                	</systemPropertyVariables>
-				                	<trimStackTrace>false</trimStackTrace>
-            					</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
-
+		<profile>
+			<id>jrf-integration-tests</id>
+			<properties>
+				<skipITs>false</skipITs>
+				<includes-failsafe>**/JrfInOperator*Test.java</includes-failsafe>
+				<jrf_enabled>true</jrf_enabled>
+			</properties>
+		</profile>
 		<profile>
 			<id>default</id>
 			<activation>
@@ -202,25 +369,9 @@
 			<properties>
 				<surefireArgLine></surefireArgLine>
 				<failsafeArgLine></failsafeArgLine>
+				<skipITs>true</skipITs>
+				<jrf_enabled>false</jrf_enabled>
 			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.coveo</groupId>
-						<artifactId>fmt-maven-plugin</artifactId>
-						<version>2.8</version>
-						<executions>
-							<execution>
-								<phase>test</phase>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 	</profiles>
-
 </project>
